syntax = "proto3";
package zhito.inner_class;

import "zframe.proto";
// import "base.proto";
// import "proto_to_struct.proto";
message ZPointCloudXYZIT
{
    ZFrame header = 1 ;
    bytes pcl_compressed_pc = 2;    // pcl的压缩点云
}

